DARK: fix exporess checkout covering 'add review' button (#165)
## JIRA Ticket

[YSHOP2-1072](https://youcanshop.atlassian.net/browse/YSHOP2-1072)

## QA Steps
### Prerequisites:
-  [ ] Make sure you have products displayed on your store front
-  [ ] Make sure you have sticky express checkout enabled
-  [ ] Make sure you have `Theme 3` enabled as the active theme
- [ ] From the theme editor and in the product details page, make sure
you add a Customer Reviews section.

### Steps
- [ ] In your store front, go to the product details page of a product
you have
- [ ] Scroll down until the express checkout button is aligned with the
"Add review" button
- [ ] You should be able to click on the "Add review" button

[YSHOP2-1072]:
https://youcanshop.atlassian.net/browse/YSHOP2-1072?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -589,6 +589,7 @@ input:not([type='radio']),
   left: 0;
   width: 100%;
   z-index: 999;
+  pointer-events: none;
 
   @include breakpoint('md') {
     display: grid;
